OSP-Core: Improvements to 'Stream Key', 'RTMP Ingest', and 'XMPP Token' fields for channel settings. !396 (@Helix9618)
OSP-Core: Bumps VideoJs version to 8.9.0
OSP-Core: Adds `ospXMPPDomain` as an option in the config.py
OSP-Core: Adds ability for users to change username
Ejabberd: Sets the default XMPP domain to osp.internal


0.9.10
==============================================
OSP: Added Beta Support for OSP-Hub (hub.openstreamingplatform.com)
OSP: OSP-Core, OSP-RTMP, and OSP-Proxy Python Dependencies have been moved to VirtualEnvironment. Will be migrated on upgrades
OSP-Core: Improvement and Fixes to Video Clipping !388
OSP-Core: Updated RTMP Ingest Labels !386
OSP-Core: Truncates Video Comments > 2048 Characters
OSP-Core: Fixes to Chat Popout Window
OSP-Core: Fixes for HTML returns on Deleted Users
OSP-Core: Adds User Notification on Video Processing Start and Completion
OSP-Core: Fixes a possible JS xss vulnerability in the chat and profile system.
OSP-Core: Formatting Change on Sort By Button
OSP-Installer: Added check to ensure required SMTP values are present
OSP-Installer: Moves Default Nginx Install to 1.22.1
OSP-Installer: Moves Default Ejabberd Install to 23.04
OSP-Installer: Moves Default ZLib Install to 1.3

0.9.9
==============================================
OSP-Core: Fixes for Channel Level Webhooks Not Displaying
OSP-Core: Optimizations on Channel Level Webhooks
OSP-Core: Fixes to the /user endpoint which causes 500 error on pulling users with channels
OSP-Core: Added Ability for Admins to Transfer a Channel to Another User
OSP-Core: Adds Ability for Admins to Force Reset a User Password
OSP-Core: Optimized /video API routes on all videos and individual video
OSP-Core: Optmized Updating of Channel Chat Settings
OSP-Core: Fixes a bug where video comments > 2048 characters would cause a 500 error
OSP-Core/Ejabberd: Removed the requirement for configuring external Ejabberd access.  OSP will now act as a reverse proxy to Ejabberd's BOSH connection
