@@ -12,6 +12,7 @@ OSP-Core: Bumps VideoJs version to 8.9.0
 OSP-Core: Adds `ospXMPPDomain` as an option in the config.py
 OSP-Core: Adds ability for users to change username
 Ejabberd: Sets the default XMPP domain to osp.internal
+Default Template: Added User and Channel Banners. Users can now upload images to personalize the profile/channel pages they have created.
 
 
 0.9.10
